--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
                 <span>:)</span>
             </p>
             <p class="idea-6">
-                <span>J</span>
-                <span>A</span>
-                <span>D</span>
-                <span>I</span>
+                <span>JADI</span>
             </p>
         </div>
 
